force-app/main/default/objects/Credit_Note_Allocation__c/Credit_Note_Allocation__c.object-meta.xml
<CustomObject>
    <label>Credit Note Allocation</label>
    <nameField>
        <displayFormat>CNA-{0000000}</displayFormat>
        <label>Credit Note Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>