force-app/main/default/objects/Credit_Note_Allocation__c/fields/Allocation_ID__c.field-meta.xml
<CustomField>
    <fullName>Allocation_ID__c</fullName>
    <externalId>true</externalId>
    <label>Allocation ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>