force-app/main/default/objects/Credit_Note_Allocation__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <label>Credit Note</label>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipLabel>Credit Note Allocations</relationshipLabel>
    <relationshipName>Credit_Note_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>